--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "moment": "^2.19.4",
     "morgan": "~1.9.0",
+    "pug": "^2.0.0-rc.4",
     "sequelize": "^4.27.0",
     "sequelize-cli": "^3.2.0",
     "serve-favicon": "~2.4.5",
